unpackaged/main/default/objects/Lessons_Learned__c/Lessons_Learned__c.object-meta.xml
<CustomObject>
    <label>Lessons Learned</label>
    <nameField>
        <displayFormat>LL-{0000}/{MMYY}</displayFormat>
        <label>Lessons Learned Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lessons Learned</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>