unpackaged/main/default/objects/Lessons_Learned__c/fields/CategoryPick__c.field-meta.xml
<CustomField>
    <fullName>CategoryPick__c</fullName>
    <description>Success or lesson learned for improvement</description>
    <inlineHelpText>Success or lesson learned for improvement</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>