unpackaged/main/default/objects/Lessons_Learned__c/fields/ImpactPick__c.field-meta.xml
<CustomField>
    <fullName>ImpactPick__c</fullName>
    <description>What was the impact of the problem which needs improvement?</description>
    <inlineHelpText>What was the impact of the problem which needs improvement?</inlineHelpText>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>