unpackaged/main/default/objects/Lessons_Learned__c/fields/Mitigation__c.field-meta.xml
<CustomField>
    <fullName>Mitigation__c</fullName>
    <description>Steps to ensure the problem doesn't happen again.</description>
    <inlineHelpText>Steps to ensure the problem doesn't happen again.</inlineHelpText>
    <label>Mitigation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>