unpackaged/main/default/objects/Lessons_Learned__c/fields/ProjectRef__c.field-meta.xml
<CustomField>
    <fullName>ProjectRef__c</fullName>
    <description>Project the lesson is related to</description>
    <inlineHelpText>Project the lesson is related to</inlineHelpText>
    <label>Project</label>
    <referenceTo>inspire1__Project__c</referenceTo>
    <relationshipLabel>Lessons Learned</relationshipLabel>
    <relationshipName>Lessons_Learned</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>