unpackaged/main/default/objects/Lessons_Learned__c/fields/Success_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Success_Improvement__c</fullName>
    <description>What was successful/needs improvement</description>
    <inlineHelpText>What was successful/needs improvement</inlineHelpText>
    <label>Success/Improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>