unpackaged/main/default/objects/Lessons_Learned__c/validationRules/Lesson_VR1_MustProvideMitigation.validationRule-meta.xml
<ValidationRule>
    <fullName>Lesson_VR1_MustProvideMitigation</fullName>
    <active>true</active>
    <description>If category equals 'Needs Improvement', user must provide mitigation.</description>
    <errorConditionFormula>AND(
				ISPICKVAL(CategoryPick__c,"Needs Improvement"),
				Mitigation__c="")</errorConditionFormula>
    <errorDisplayField>Mitigation__c</errorDisplayField>
    <errorMessage>Provide the mitigation steps.</errorMessage>
</ValidationRule>