unpackaged/main/default/objects/Lessons_Learned__c/validationRules/Lesson_VR2_MustProvideImpact.validationRule-meta.xml
<ValidationRule>
    <fullName>Lesson_VR2_MustProvideImpact</fullName>
    <active>true</active>
    <description>If category equals 'Needs Improvement', user must provide the impact of the problem.</description>
    <errorConditionFormula>AND(
				ISPICKVAL(CategoryPick__c,"Needs Improvement"),
				ISPICKVAL(ImpactPick__c,""))</errorConditionFormula>
    <errorDisplayField>ImpactPick__c</errorDisplayField>
    <errorMessage>Must provide impact of the problem.</errorMessage>
</ValidationRule>